# backend

./: .gitignore  Dockerfile  README.md  default.env  docker-compose.yml  pyproject.toml
database/: config.py  db.py  loader.py  models.py  queries.py
service/: __main__.py  config.py
service/database/: db.py  loader.py  models.py  queries.py
