[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Evgenij Karpov <gedrip87@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.19.0"
Flask = "^2.0.2"
dostoevsky = "^0.6.0"
pydantic = "^1.8.2"
jupyter = "^1.0.0"
pandas = "^1.3.3"
glom = "^20.11.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
mypy = "^0.910"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
