[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Evgenij Karpov <gedrip87@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
httpx = "^0.19.0"
SQLAlchemy = "^1.4.25"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
mypy = "^0.910"
flake8 = "^3.9.2"
psycopg2-binary = "^2.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
